--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,13 @@
     "addEvent",
     "keepAlive",
     "writeChat",
-    "getChatMessages"
+    "getChatMessages",
+    "data",
+    "setProperty",
+    "save"
+  ],
+  "Lua.diagnostics.disable": [
+    "missing-parameter",
+    "discard-returns"
   ]
 }
